# storage_health

./: .gitignore  README.md  Storage Health.code-workspace  pyproject.toml  start  start.sh
scripts/: install-macos-login-agent.sh  serve.sh
sd_health/: __init__.py  __main__.py  cli.py  dashboard.html  db.py  format_disk.py  full_test.py  info.py  log.py  macos_verify.py  models.py  persist.py  quick_test.py  report.py  safety.py  storage_identity.py  web.py
sd_health/static/: theme.css
