[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storage-health"
version = "0.1.0"
description = "Storage Health — test removable storage (SD/USB/etc.), SQLite log, HTML report, cross-platform format hints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[project.scripts]
storage-health = "sd_health.cli:app"
sd-health = "sd_health.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["sd_health"]

[tool.hatch.build.targets.sdist]
include = ["sd_health", "README.md", "pyproject.toml"]
